Fix mobile background alignment and disable parallax

--- a/style.css
+++ b/style.css
@@ -355,11 +355,15 @@ html,
   }
 
   .center-content::before {
-    width: 300%;
-    height: 100vh;
+    position: fixed;
+    /* Fix to viewport on mobile */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
     background-size: contain;
     opacity: 0.1;
-    top: 50%;
   }
 }
 
